create infrastructure for framework, pom and first test

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,13 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+allure-results/
+allure-report/
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
